--- a/spi/tomcat/pom.xml
+++ b/spi/tomcat/pom.xml
@@ -30,7 +30,7 @@
 
     <groupId>org.glassfish.exousia</groupId>
     <artifactId>exousia.spi.tomcat</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
 
     <name>Exousia Tomcat Integration</name>
     <description>
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>org.glassfish.exousia</groupId>
             <artifactId>exousia</artifactId>
-            <version>3.0.0</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
